--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,30 @@
 .read-the-docs {
   color: #888;
 }
+/* Popup Image */
+.popup {
+  width: 100%;
+  height: 130vh;
+  background-color: rgba(17, 0, 0, 0.5);
+  position: fixed;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 999;
+}
+.popup button{
+  position: absolute;
+  top: 150px;
+  right: 150px;
+  color:red;
+}
+.popup img {
+  position: relative;
+  top: 15%;
+  left: 15%;
+  display: block;
+  width: 70%;
+  height: auto;
+  object-fit: cover;
+  max-height: 100%;
+}
