--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@
 .popup {
   width: 100%;
   height: 130vh;
-  background-color: rgba(17, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.76);
   position: fixed;
   top: 60%;
   left: 50%;
@@ -54,13 +54,30 @@
   right: 150px;
   color:red;
 }
-.popup img {
+.popup-img{
+  box-sizing: border-box;
   position: relative;
   top: 15%;
   left: 15%;
   display: block;
   width: 70%;
-  height: auto;
-  object-fit: cover;
-  max-height: 100%;
+  height: 75vh;
+  border:10px double red;
 }
+.popup img{
+   width: 100%;
+   height: 100%;
+   object-fit: contain;
+}
+/* .popup img {
+  box-sizing: border-box;
+  position: relative;
+  top: 15%;
+  left: 15%;
+  display: block;
+  width: 70%;
+  height: 75vh;
+  object-fit: top top center;
+  max-height: 100%;
+  border:10px double red;
+} */
